--- a/README
+++ b/README
@@ -4,7 +4,7 @@ the licence for this software.
 This product includes software developed by the Apache Software Foundation 
 (http://www.apache.org/). 
 
-WS3 is (C) Copyright Andrew Ferrier, 2005.
+WS3 is (C) Copyright Andrew Ferrier, 2005 and 2012.
 
 ---------------------------------------------------------------------
 
@@ -12,8 +12,3 @@ WS3 is supplied with Apache's Xerces Java Parser, version 1.4.4, in the
 file xerces.jar. Xerces can also be downloaded separately, from 
 http://xml.apache.org/xerces-j/. However, it is recommended that you use 
 the version supplied with WS3.
-
----------------------------------------------------------------------
-
-For more information on using WS3, see the user guide, downloadable at 
-http://www.new-destiny.co.uk/andrew/project/
